--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: dalvaro- <dalvaro-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/07 19:39:21 by dalvaro-          #+#    #+#              #
-#    Updated: 2021/04/07 19:39:36 by dalvaro-         ###   ########.fr        #
+#    Updated: 2021/04/07 20:15:52 by dalvaro-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,6 @@ NAME		= libft.a
 SRCS		=	ft_isalnum.c\
 				ft_isalpha.c\
 				ft_isdigit.c\
-				ft_isspace.c\
 				ft_isprint.c\
 				ft_isascii.c\
 				ft_toupper.c\
@@ -36,8 +35,9 @@ SRCS		=	ft_isalnum.c\
 				ft_memchr.c\
 				ft_memcmp.c\
 				ft_calloc.c\
-				ft_strdup.c\
-				ft_substr.c\
+				ft_strdup.c
+				
+SRC_ADD		=	ft_substr.c\
 				ft_strjoin.c\
 				ft_strtrim.c\
 				ft_split.c\
@@ -46,8 +46,9 @@ SRCS		=	ft_isalnum.c\
 				ft_putchar_fd.c\
 				ft_putstr_fd.c\
 				ft_putendl_fd.c\
-				ft_putnbr_fd.c\
-				ft_lstnew.c\
+				ft_putnbr_fd.c
+
+SRC_EXTRA	=	ft_lstnew.c\
 				ft_lstadd_front.c\
 				ft_lstsize.c\
 				ft_lstlast.c\
@@ -55,7 +56,7 @@ SRCS		=	ft_isalnum.c\
 				ft_lstdelone.c\
 				ft_lstclear.c\
 				ft_lstiter.c\
-				ft_lstmap.c\
+				ft_lstmap.c
 
 OBJS		= $(SRCS:.c=.o)
 CC			= cc
