--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: dalvaro- <dalvaro-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/07 19:39:21 by dalvaro-          #+#    #+#              #
-#    Updated: 2021/04/12 01:12:19 by dalvaro-         ###   ########.fr        #
+#    Updated: 2021/04/12 01:58:28 by dalvaro-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,10 +32,10 @@ SRCS		=	ft_atoi.c\
 				ft_memcpy.c\
 				ft_memmove.c\
 				ft_memccpy.c\
-				
-SRCS_2		=	ft_memchr.c\
+				ft_memchr.c\
 				ft_memcmp.c\
-				ft_calloc.c\
+				
+SRCS_2		=	ft_calloc.c\
 				ft_strdup.c
 				
 SRC_ADD		=	ft_substr.c\
