--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: dalvaro- <dalvaro-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/07 19:39:21 by dalvaro-          #+#    #+#              #
-#    Updated: 2021/04/15 17:09:12 by dalvaro-         ###   ########.fr        #
+#    Updated: 2021/04/15 20:43:04 by dalvaro-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -45,8 +45,7 @@ SRCS		=	ft_atoi.c\
 				ft_strtrim.c\
 				ft_strmapi.c\
 				ft_split.c\
-
-SRC_ADD		=	ft_itoa.c\
+				ft_itoa.c\
 				
 SRC_EXTRA	=	ft_lstnew.c\
 				ft_lstadd_front.c\
@@ -64,10 +63,10 @@ RM			= rm -f
 CFLAGS		= -Wall -Werror -Wextra
 
 # Change this Old-Fashioned Suffix Rules for the current one
-.c.o:
-	$(CC) $(CFLAGS) -c $< -o $(<:.c=.o)
-#%.o: %.c
-#	$(CC) -c $(CFLAGS) $< -o $@
+#.c.o:
+#	$(CC) $(CFLAGS) -c $< -o $(<:.c=.o)
+%.o: %.c
+	$(CC) -c $(CFLAGS) $< -o $@
 
 # Use  "ar rcs" instead of "ar rc + ranlib"
 $(NAME): 	$(OBJS)
