--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: dalvaro- <dalvaro-@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/04/07 19:39:21 by dalvaro-          #+#    #+#              #
-#    Updated: 2021/04/15 20:43:04 by dalvaro-         ###   ########.fr        #
+#    Updated: 2021/04/17 03:10:19 by dalvaro-         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -46,8 +46,7 @@ SRCS		=	ft_atoi.c\
 				ft_strmapi.c\
 				ft_split.c\
 				ft_itoa.c\
-				
-SRC_EXTRA	=	ft_lstnew.c\
+				ft_lstnew.c\
 				ft_lstadd_front.c\
 				ft_lstsize.c\
 				ft_lstlast.c\
@@ -55,12 +54,25 @@ SRC_EXTRA	=	ft_lstnew.c\
 				ft_lstdelone.c\
 				ft_lstclear.c\
 				ft_lstiter.c\
-				ft_lstmap.c
+				#ft_lstmap.c
+				
+SRCS_BONUS	=	ft_lstnew.c\
+				ft_lstadd_front.c\
+				ft_lstsize.c\
+				ft_lstlast.c\
+				ft_lstadd_back.c\
+				ft_lstdelone.c\
+				ft_lstclear.c\
+				ft_lstiter.c\
+				#ft_lstmap.c
 
 OBJS		= $(SRCS:.c=.o)
+OBJS_BONUS	= $(SRCS_BONUS:.c=.o)
 CC			= cc
 RM			= rm -f
 CFLAGS		= -Wall -Werror -Wextra
+# Use  "ar rcs" instead of "ar rc + ranlib"
+AR = ar rcs
 
 # Change this Old-Fashioned Suffix Rules for the current one
 #.c.o:
@@ -68,9 +80,11 @@ CFLAGS		= -Wall -Werror -Wextra
 %.o: %.c
 	$(CC) -c $(CFLAGS) $< -o $@
 
-# Use  "ar rcs" instead of "ar rc + ranlib"
 $(NAME): 	$(OBJS)
-			ar rcs  $(NAME) $(OBJS)
+			$(AR)  $(NAME) $(OBJS)
+
+bonus: 		$(NAME) $(OBJS_BONUS)
+			$(AR) $(NAME) $(OBJS_BONUS)
 
 all:		$(NAME)
 
